--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 bevy = "0.10"
 bevy_editor_pls = "*"
 bevy_mod_picking = "*"
+bevy_mod_outline = "0.4"
 
 [profile.dev.package."*"]
 opt-level = 3
